Clarity Theme/Theme.css
/**
 * "Clarity" by Valerio Lyndon
 * Revision 21.4
 * 
 * = TABLE OF CONTENTS =
 * 
 * IMPORTS
 * 
 * OPTIMIZATIONS     : Page-wide repeated code.
 * Transitions
 * Nav-Buttons
 * 
 * PAGE-BASE         : Page-wide properties & widths.
 * 
 * HEADER
 * Cover
 * Nav-Main          : Main Bar
 * Nav-Buttons-Top   : Located above main bar.
 * Nav-Buttons-L     : Below main bar on left. User menu.
 * Nav-Buttons-R     : Below main bar on right. Stats & Filters.
 * Sort-By           : Sort menu.
 * 
 * LIST              : Anime/manga listings.
 * Base
 * Status
 * Image             : Image/Number
 * Title             : Title/Type
 * Score
 * Progress
 * Priority
 * Rating
 * Magazine
 * Storage
 * Season
 * Tags              : Tags/Studio/Licensors
 * Dates             : Started/Finished/Airing/Etc
 * More-Info
 * 
 * FOOTER
 * 
 * OVERLAYS          : Overlayed menus and iframes.
 * Base
 * iframes
 * Filter-Menu
 */





/*==============================*\
  !IMPORTS
\*==============================*/

@\import "https://fonts.googleapis.com/css?family=Oswald";





/*==============================*\
  !OPTIMIZATIONS @Transitions
\*==============================*/

.icon-menu:before, 
.icon-menu:after,
.icon-menu svg,
.icon-menu.setting,
.icon-menu.setting .text,
.icon-menu.setting .text a,
.header .header-title:after,
.status-menu:after,
.fixed .status-menu:after,
.status-menu-container:not(.fixed) .status-menu,
.status-menu-container.fixed .status-menu,
.status-button:after,
#search-box,
#search-box input,
#search-box:after,
.list-table-header .header-title,
.list-table .list-table-header .header-title .link.sort,
.data.image .link:after,
.data.score a,
.data.progress,
.data.chapter,
.data.volume,
.data.tags a,
.data.studio a,
.data.licensor a,
.data.tags a.edit,
.data.tags a.edit:after,
.list-item .data.tags a.edit,
.data.priority,
#advanced-options .advanced-options-button a,
#fancybox-close
{
	-webkit-transition: all 0.3s ease !important;
	transition: all 0.3s ease !important;
}

#search-button i,
.header-info a,
.data.title .link.sort,
.data.progress span .link,
a[class^="icon-add-"],
.data.chapter span .link,
.data.volume span .link,
.add-edit-more span a,
.data.season a,
.more-info .td1 > div > a,
#advanced-options .advanced-options-header .description,
#advanced-options .advanced-options-header .description:before,
#advanced-options [class*="-widget"] input,
#advanced-options [class*="-widget"] select,
#advanced-options [class*="-widget"] label
{
	-webkit-transition: all 0.15s ease !important;
	transition: all 0.15s ease !important;
}



/*------------------------------*\
  OPTIMIZATIONS @Nav-Buttons
\*------------------------------*/

.header .header-title,
.header-info,
.icon-menu,
.list-menu-float .icon-menu,
.icon-menu.quick-add:before,
.stats a,
.list-table > tbody:first-of-type:after
{
	display: inline-block;
	height: 26px !important;
	width: 26px !important;
	background: #fff !important;
	border-radius: 13px;
	
	color: #323232 !important;
	font: normal 0/26px Arial, Verdana, sans-serif;
	text-indent: 0;
	text-align: left;
	text-shadow: none;
	white-space: nowrap;
	vertical-align: top;
	
	overflow: hidden;
	box-shadow: 0px 1px 2px rgba(0,0,0,0.2);
	
	-webkit-transition: all 0.3s ease !important;
	transition: all 0.3s ease !important;
}

.header .header-title:hover,
.icon-menu:hover,
.list-menu-float .icon-menu:hover,
.stats a:hover
{
	width: 100px !important;
	background: #1d439b !important;
	
	color: #fff !important;
}





/*==============================*\
  !PAGE-BASE
\*==============================*/

html {
	position: relative;
	
	min-height: 100%;
}

body {
	padding-bottom: 64px;
	background: #efefef none no-repeat center / cover fixed !important;
}

.list-container {
	position: static;
	
	width: 100%;
	background: none !important;
	border: none;
}

.list-block {
	width: 1060px;
	min-height: initial;
	margin: 64px auto 0;
}

.status-menu-container.fixed + .list-block {
	margin-top: 128px !important;
}

.list-unit {
	width: 100% !important;
	margin: 0
}

.list-table {
	border: none !important;
}


a, a:hover {
	color: #1d439b;
}





/*==============================*\
  !HEADER @Cover
\*==============================*/

.cover-block {
	position: absolute;
	top: 0;
	left: 0;
	
	width: 100%;
	min-width: 1060px;
	height: 318px;
	background: #323232 no-repeat center center / cover scroll;
	
	z-index:-5
}

/* Different images depending on page size. Meant to save a few KBs. */
@media (max-width: 1920px) {
	.cover-block {
		background-image: url(http://i.imgur.com/30p9zca.jpg);
	}
}
@media (min-width: 1921px) {
	.cover-block {
		background-image: url(http://i.imgur.com/gqcj6sM.jpg);
	}
}

/* Gradient */
.cover-block:before {
	content: "";
	position: absolute;
	bottom: 0;
	left: 0;
	
	display: block;
	width: 100%;
	height: 50px;
	background: -webkit-linear-gradient(bottom,rgba(0,0,0,0.5),rgba(0,0,0,0));
	background: linear-gradient(to top,rgba(0,0,0,0.5),rgba(0,0,0,0));
}

/* Hide unnecessary container & change image button */
.btn-list-setting, #cover-image  { display: none !important; }



/* - - - - - - - - - - - - - - -*\
  Character Image
\*- - - - - - - - - - - - - - - */

.cover-block .image-container {
	display: block !important;
	width: 1060px;
	height: 100%;
	padding: 0;
	background: url(http://i.imgur.com/is2e80Q.png) no-repeat right center / contain;
	margin: 0 auto;
}
/* ... */

